fix resume link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/fosterdill" id="view-on-github" class="button"><span>View on GitHub</span></a>
-          <a href="http://fosterdill.github.io/resume" class="button"><span>Resume</span></a>
+          <a href="http://fosterdill.github.io/dylan-foster-resume.pdf" class="button"><span>Resume</span></a>
         </section>
 
         <hr>
