--- a/invaders/index.html
+++ b/invaders/index.html
@@ -1,1 +1,16 @@
-hello
+<html>
+  <head>
+    <script src="vendor/underscore.js"></script>
+    <script src="js/moving_object.js"></script>
+    <script src="js/baddie_generator.js"></script>
+    <script src="js/enemy.js"></script>
+    <script src="js/shot.js"></script>
+    <script src="js/ship.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/game_init.js"></script>
+  </head>
+  <body>
+    <canvas id="game" width="500" height="500">
+    </canvas>
+  </body>
+</html>
