--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 <p>I don't always code, but when I do I really like it. I code for fun and for work, and most of the rest of the time. Ok, so maybe I do always code. I grew up in upstate New York, and moved to San Francisco to experience the exciting world of Tech where it is hottest. While here I have met a lot of great people and worked on some very cool projects, some of which are above. </p>
 <br>
-<p>One skill I have learned since moving to the city is how to communicate ideas effectively to others. I have done a hefty amount of pair programming with other devlopers, and the ability to talk through ideas and amalmagate several diverging paths of thought is not something that I at first understood. Through lots of practice and some struggle, though, I feel that I have a good grasp on what it takes to work in collaboration with my friends/collegues effectively.</p>
+<p>I have done a hefty amount of pair programming with other developers, and the ability to talk through ideas and amalmagate several diverging paths of thought is not something that I at first understood. Through lots of practice and some struggle, though, I feel that I have a good grasp on what it takes to work in collaboration with my friends/collegues effectively.</p>
 <br>
-<p>If I had to describe myself as a coder in a word, it would be excited. I enjoy solving problems and working with other people, but more than anything, just building things. For some it is difficult to keep the payoff in mind while working on a bug, or cranking out boilerplate, but for me its motivation. That website or game or server that I a working on is worth whatever I have to do to make it fast, clean, and beautiful.  </p>
+<p>If I had to describe myself as a coder in a word, it would be excited. I enjoy solving problems and working with other people, but more than anything, just building things. For some it is difficult to keep the payoff in mind while working on a bug, or cranking out boilerplate, but for me its motivation. That website or game or server that I am working on is worth whatever I have to do to make it fast, clean, and beautiful.  </p>
 
 <!-- <h3> -->
 <!-- <a name="rather&#45;drive&#45;stick" class="anchor" href="#rather&#45;drive&#45;stick"><span class="octicon octicon&#45;link"></span></a>Rather Drive Stick?</h3> -->
