--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>About Dylan</h3>
+<img style="padding-left: 141px" width="50%" height="50%" src="images/dylan-foster.jpg"></img>
+<br>
+<br>
 
 <p>I don't always code, but when I do I really like it. I code for fun and for work, and most of the rest of the time. Ok, so maybe I do always code. I grew up in upstate New York, and moved to San Francisco to experience the exciting world of Tech where it is hottest. While here I have met a lot of great people and worked on some very cool projects, some of which are above. </p>
 <br>
