add linkedin button, fix styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/fosterdill" id="view-on-github" class="button"><span>View on GitHub</span></a>
-          <a href="http://fosterdill.github.io/dylan-foster-resume.pdf" class="button"><span>Resume</span></a>
+          <a href="https://github.com/fosterdill" id="view-on-github" class="button">
+            <span>GitHub</span>
+          </a>
+          <a href="http://www.linkedin.com/pub/dylan-foster/8a/784/763/" id="view-on-linkedin" class="button">
+            <span>LinkedIn</span>
+          </a>
+          <a href="http://fosterdill.github.io/dylan-foster-resume.pdf" class="button">
+            <span>Resume</span>
+          </a>
         </section>
 
         <hr>
