--- a/invaders/index.html
+++ b/invaders/index.html
@@ -8,9 +8,25 @@
     <script src="js/ship.js"></script>
     <script src="js/game.js"></script>
     <script src="js/game_init.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Duru+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
   <body>
-    <canvas id="game" width="500" height="500">
-    </canvas>
+    <center>
+      <p class="red-font">
+      IN DEVELOPMENT
+      </p>
+      <canvas id="game" width="500" height="500">
+      </canvas>
+      <p>
+      A different take on a space shooter. You have to rotate your environment and move your ship to stay alive as long as possible. 
+      </p>
+
+      <p>
+      A, D: Rotate environment.
+      Up, Down, Left, Right: Move Ship.
+      Space: Fire.
+      </p>
+    </center>
   </body>
 </html>
