small style changes

--- a/index.html
+++ b/index.html
@@ -18,19 +18,13 @@
   <div class="container">
       <div class="navbar">
         <div class="header-buttons">
-          <div class="header-button">
-            <a id="about-link" href="#about">About</a>
-          </div>
-          <div class="header-button">
-            <a id="projects-link" href="#projects">Projects</a>
-          </div>
-        </div>
-        <div class="name">
-          <span class="bigger-font">D</span>ylan <span class="bigger-font">F</span>oster  
           <a class="resource" href="https://www.github.com/fosterdill">GitHub</a>
           <a class="resource" href="http://www.linkedin.com/pub/dylan-foster/8a/784/763/">Linkedin</a>
           <a class="resource" href="resume.pdf">Resume</a>
           <span class="resource"><a href="mailto:fosterdill@gmail.com">Email</a></span>
+        </div>
+        <div class="name">
+          <span class="bigger-font">D</span>ylan <span class="bigger-font">F</span>oster  
         </div>
       </div>
       <div class="content">
@@ -38,7 +32,7 @@
     <div class="viewport">
       <div class="scrollable">
         <div class="about-container">
-        <h1 style="text-align: center">About</h1>
+          <h1 style="text-align: center">About <a class="about-link" href="#/about"><img src="permalink.png"></a></h1>
         <div class="about">
           <div class="profile-picture">
             <img src="dylan-foster-roof.jpg">
@@ -51,7 +45,8 @@
       </div>
 
       <div class="project-container">
-        <h1 style="text-align: center">Projects</h1>
+        <h1 style="text-align: center">Projects <a class="projects-link" href="#/projects"><img src="permalink.png"></a></h1>
+
 
         <div class="project-show">
           <div class="project-img">
