fix small typos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>I don't always code, but when I do I really like it. I love working with <b> Ruby, Rails, JavaScript, Backbone, HTML, CSS, and Node.js</b>. I code for fun and for work, and most of the rest of the time. Ok, so maybe I do always code.</p>
 
 
-          <p>If I had to describe myself in a word, it would be excited. I enjoy solving problems and working with other people, but more than anything, just building things. For some it is difficult to keep the payoff in mind while working on a bug, or cranking out boilerplate, but for me its motivation. That website or game or server that I am working on is worth whatever I have to do to make it fast, clean, and beautiful.</p>
+          <p>If I had to describe myself in a word, it would be excited. I enjoy solving problems and working with other people, but more than anything, just building things. For some it is difficult to keep the payoff in mind while working on a bug or cranking out boilerplate, but for me it's motivation. That website or game or server that I am working on is worth whatever I have to do to make it fast, clean, and beautiful.</p>
         </div>
       </div>
 
