start and retry on user pressing r

--- a/invaders/index.html
+++ b/invaders/index.html
@@ -13,9 +13,7 @@
   </head>
   <body>
     <center>
-      <p class="red-font">
-      IN DEVELOPMENT
-      </p>
+      <p class="red-font"> PERFECT: 100,000 </p>
       <canvas id="game" width="500" height="500">
       </canvas>
       <p>
