restyle game page

--- a/invaders/index.html
+++ b/invaders/index.html
@@ -13,18 +13,22 @@
   </head>
   <body>
     <center>
-      <p class="red-font"> PERFECT: 100,000 </p>
       <canvas id="game" width="500" height="500">
       </canvas>
+      <div class="desc">
       <p>
-      A different take on a space shooter. You have to rotate your environment and move your ship to stay alive as long as possible. 
-      </p>
-
-      <p>
-      A, D: Rotate environment.
-      Up, Down, Left, Right: Move Ship.
+      A, D: Rotate environment.<br>
+      Up, Down, Left, Right: Move Ship.<br>
       Space: Fire.
       </p>
+      <p>
+      A different take on a space shooter. You have to rotate your environment and move your ship to kill as many baddies as possible, but be accurate or you will get a low score. 
+      </p>
+      <p>
+      A perfect score is 100,000
+      </p>
+      </div>
+
     </center>
   </body>
 </html>
