--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
 
         <div class="project-show">
           <div class="project-img">
+            <a href="invaders"><img src="fpinvaders.png"></a>
+          </div>
+          <div class="project-title">
+            <a href="invaders">First Person Invaders</a> <a href="https://github.com/fosterdill/first-person-invaders">(source)</a>
+          </div>
+          <div class="project-desc">
+Unique space game written in Javascript, control your ship and the environment. Rotate space to kill enemies and get a high score. Utilizes strong object oriented design for code organization. Allows rotation of context through the use of trigonometry and vector arithmetic.
+          </div>
+        </div>
+
+        <div class="project-show">
+          <div class="project-img">
             <a href="https://github.com/jacknoble/coffeend"><img src="Screenshot from 2014-03-08 18:32:55.png"></a>
           </div>
           <div class="project-title">
@@ -72,17 +84,6 @@
           </div>
         </div>
 
-        <div class="project-show">
-          <div class="project-img">
-            <a href="invaders"><img src="fpinvaders.png"></a>
-          </div>
-          <div class="project-title">
-            <a href="invaders">First Person Invaders</a> <a href="https://github.com/fosterdill/first-person-invaders">(source)</a>
-          </div>
-          <div class="project-desc">
-Unique space game written in Javascript, control your ship and the environment. Rotate space to stay alive and get a high score. Utilizes strong object oriented design for code organization. Allows rotation of context through the use of trigonometry and vector arithmetic.
-          </div>
-        </div>
 
         <div class="project-show">
           <div class="project-img">
