--- a/invaders/index.html
+++ b/invaders/index.html
@@ -22,7 +22,7 @@
       Space: Fire.
       </p>
       <p>
-      A different take on a space shooter. You have to rotate your environment and move your ship to kill as many baddies as possible, but be accurate or you will get a low score. 
+      A different take on a space shooter. You have to rotate your environment and move your ship to kill as many baddies as possible, but be accurate or you will get a low score. You can only hit enemies when they are facing you.
       </p>
       <p>
       A perfect score is 100,000
