get rid of permalinks

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="viewport">
       <div class="scrollable">
         <div class="about-container">
-          <h1 style="text-align: center">About <a class="about-link" href="#/about"><img src="permalink.png"></a></h1>
+          <h1 style="text-align: center">About </h1>
         <div class="about">
           <div class="profile-picture">
             <img src="dylan-foster-roof.jpg">
@@ -45,7 +45,7 @@
       </div>
 
       <div class="project-container">
-        <h1 style="text-align: center">Projects <a class="projects-link" href="#/projects"><img src="permalink.png"></a></h1>
+        <h1 style="text-align: center">Projects </h1>
 
 
         <div class="project-show">
