add link to coffeedate

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Unique space game written in Javascript, control your ship and the environment. 
             <a href="https://github.com/jacknoble/coffeend"><img src="Screenshot from 2014-03-08 18:32:55.png"></a>
           </div>
           <div class="project-title">
-            Coffee Date (in progress) <a href="https://github.com/jacknoble/coffeend">(source)</a>
+            <a href="http://coffeend.herokuapp.com">Coffee Date (in progress) </a><a href="https://github.com/jacknoble/coffeend">(source)</a>
           </div>
           <div class="project-desc">
             Collabrative project with a friend. Uses Google Maps V3 API, Google Places API, Redis, DJ (Delayed Job), HTML5 Geolocation, Rails, and Backbone.
