fix coffeend picture link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Unique space game written in Javascript, control your ship and the environment. 
 
         <div class="project-show">
           <div class="project-img">
-            <a href="https://github.com/jacknoble/coffeend"><img src="Screenshot from 2014-03-08 18:32:55.png"></a>
+            <a href="http://coffeend.herokuapp.com/"><img src="Screenshot from 2014-03-08 18:32:55.png"></a>
           </div>
           <div class="project-title">
             <a href="http://coffeend.herokuapp.com">Coffee Date (in progress) </a><a href="https://github.com/jacknoble/coffeend">(source)</a>
