--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
   </head>
   <body>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-60099080-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
   <div class="container">
       <div class="navbar">
         <div class="name">
-          <span class="bigger-font">D</span>ylan <span class="bigger-font">F</span>oster  
+          <span class="bigger-font">D</span>ylan <span class="bigger-font">F</span>oster
         </div>
         <div class="header-buttons">
           <a class="resource" href="https://www.github.com/fosterdill">GitHub</a>
@@ -55,7 +66,7 @@
             <a href="http://www.bettergram.com/">Bettergram</a> <a href="https://github.com/fosterdill/bettergram">(source)</a>
           </div>
           <div class="project-desc">
-           A clean and snappy interface to Instagram.com. Uses Redis caching for API feed requests. Uses Backbone and Rails. Maintains RESTful conventions between client and server side communication. Relies on OAuth 2.0 to talk to Instagram's API. 
+           A clean and snappy interface to Instagram.com. Uses Redis caching for API feed requests. Uses Backbone and Rails. Maintains RESTful conventions between client and server side communication. Relies on OAuth 2.0 to talk to Instagram's API.
           </div>
         </div>
 
